# momentum

./: .dockerignore  .gitignore  404.html  CMakeLists.txt  README.md  disable-simd-for-pymomentum.patch  index.html  lunr-index-1718391621657.json  lunr-index-1718400122774.json  lunr-index-1718409295576.json  lunr-index-1718413430741.json  lunr-index-1718422999402.json  lunr-index-1718424615700.json  lunr-index-1718424931338.json  lunr-index-1718662279261.json  lunr-index-1718670140046.json  lunr-index-1718767576119.json  lunr-index-1718831836993.json  lunr-index-1718868298603.json  lunr-index-1718896827422.json  lunr-index-1718897050065.json  lunr-index-1718909266591.json  lunr-index-1718920061697.json  lunr-index-1718933065230.json  lunr-index-1718937151209.json  lunr-index-1718952018913.json  lunr-index-1719175694115.json  lunr-index-1719254213722.json  lunr-index-1719299949914.json  lunr-index-1719413392079.json  lunr-index-1719417109123.json  lunr-index-1719420328969.json  lunr-index-1719512288850.json  lunr-index-1719513273878.json  lunr-index-1719520261940.json  lunr-index-1719861789802.json  lunr-index-1719892798865.json  lunr-index-1719966384735.json  lunr-index-1719966771638.json  lunr-index-1719979211101.json  (+427 more)
.github/: PULL_REQUEST_TEMPLATE.md
axel/: CMakeLists.txt  axel-config.cmake.in
axel/axel/: BoundingBox.cpp  BoundingBox.h  Bvh.cpp  Bvh.h  BvhBase.h  BvhCommon.h  BvhEmbree.cpp  BvhEmbree.h  BvhFactory.cpp  BvhFactory.h  CFM_RULES  Checks.h  KdTree.h  Log.h  Profile.h  Ray.h  SimdKdTree.cpp  SimdKdTree.h  TriBvh.cpp  TriBvh.h  TriBvhEmbree.cpp  TriBvhEmbree.h
axel/axel/common/: Constants.h  Types.h  VectorizationTypes.h
axel/axel/common/test/: VectorizationTypesTest.cpp
axel/axel/math/: BoundingBoxUtils.h  ContinuousCollisionDetection.cpp  ContinuousCollisionDetection.h  CoplanarityCheck.cpp  CoplanarityCheck.h  EdgeEdgeDistance.cpp  EdgeEdgeDistance.h  PointTriangleProjection.cpp  PointTriangleProjection.h  PointTriangleProjectionDefinitions.h  RayTriangleIntersection.cpp  RayTriangleIntersection.h
axel/axel/math/test/: ContinuousCollisionDetectionTest.cpp  PointTriangleProjectionTest.cpp  RayTriangleIntersectionTest.cpp
axel/axel/test/: BoundingBoxTest.cpp  BvhEmbreeTest.cpp  BvhFactoryTest.cpp  BvhTest.cpp  Helper.h  KdTreeTest.cpp  SimdKdTreeTest.cpp  TriBvhEmbreeTest.cpp  TriBvhTest.cpp
cmake/: FindCUDAToolkit.cmake  FindFbxSdk.cmake  FindIconv.cmake  Findre2.cmake  build_variables.bzl  momentum-config.cmake.in  mt_defs.cmake
docker/: Dockerfile
doxygen/: accessor__utils_8h.html  accessor__utils_8h_source.html  aim__error__function_8cpp.html  aim__error__function_8h.html  aim__error__function_8h_source.html  aligned_8h.html  aligned_8h_source.html  annotated.html  app__utils_8cpp.html  app__utils_8h.html  app__utils_8h_source.html  blend__shape_8cpp.html  blend__shape_8h.html  blend__shape_8h_source.html  blend__shape__base_8cpp.html  blend__shape__base_8h.html  blend__shape__base_8h_source.html  blend__shape__io_8cpp.html  blend__shape__io_8h.html  blend__shape__io_8h_source.html  blend__shape__skinning_8cpp.html  blend__shape__skinning_8h.html  blend__shape__skinning_8h_source.html  c3d__io_8cpp.html  c3d__io_8h.html  c3d__io_8h_source.html  ceres__utility_8h.html  ceres__utility_8h_source.html  character_2fwd_8h.html  character_2fwd_8h_source.html  character_2types_8h.html  character_2types_8h_source.html  character_8cpp.html  character_8h.html  character_8h_source.html  character__io_8cpp.html  character__io_8h.html  (+835 more)
momentum/examples/hello_world/: CMakeLists.txt  main.cpp
pymomentum/: CMakeLists.txt  quaternion.py  skel_state.py
pymomentum/cmake/: build_variables.bzl
pymomentum/cpp_test/: tensor_ik_test.cpp  tensor_utility_test.cpp
pymomentum/doc/: conf.py  marker_tracking.rst  solver.rst
pymomentum/geometry/: geometry_pybind.cpp  geometry_test_helper_pybind.cpp  momentum_geometry.cpp  momentum_geometry.h  momentum_io.cpp  momentum_io.h
pymomentum/marker_tracking/: marker_tracking_pybind.cpp
pymomentum/python_utility/: python_utility.cpp  python_utility.h
pymomentum/quaternion/: quaternion_pybind.cpp
pymomentum/skel_state/: skel_state_pybind.cpp
pymomentum/solver/: momentum_ik.cpp  momentum_ik.h  solver_pybind.cpp
pymomentum/tensor_ik/: solver_options.h  tensor_collision_error_function.cpp  tensor_collision_error_function.h  tensor_diff_pose_prior_error_function.cpp  tensor_diff_pose_prior_error_function.h  tensor_distance_error_function.cpp  tensor_distance_error_function.h  tensor_error_function.cpp  tensor_error_function.h  tensor_error_function_utility.h  tensor_gradient.cpp  tensor_gradient.h  tensor_ik.cpp  tensor_ik.h  tensor_ik_utility.cpp  tensor_ik_utility.h  tensor_limit_error_function.cpp  tensor_limit_error_function.h  tensor_marker_error_function.cpp  tensor_marker_error_function.h  tensor_motion_error_function.cpp  tensor_motion_error_function.h  tensor_pose_prior_error_function.cpp  tensor_pose_prior_error_function.h  tensor_projection_error_function.cpp  tensor_projection_error_function.h  tensor_residual.cpp  tensor_residual.h  tensor_vertex_error_function.cpp  tensor_vertex_error_function.h
pymomentum/tensor_momentum/: tensor_blend_shape.cpp  tensor_blend_shape.h  tensor_joint_parameters_to_positions.cpp  tensor_joint_parameters_to_positions.h  tensor_kd_tree.cpp  tensor_kd_tree.h  tensor_momentum_utility.cpp  tensor_momentum_utility.h  tensor_mppca.cpp  tensor_mppca.h  tensor_parameter_transform.cpp  tensor_parameter_transform.h  tensor_quaternion.cpp  tensor_quaternion.h  tensor_skeleton_state.cpp  tensor_skeleton_state.h  tensor_skinning.cpp  tensor_skinning.h  tensor_transforms.cpp  tensor_transforms.h
pymomentum/tensor_utility/: autograd_utility.h  tensor_utility.cpp  tensor_utility.h
pymomentum/test/: test_blend_shape.py  test_closest_points.py  test_fbx.py  test_fbx_io.py  test_parameter_transform.py  test_pose_prior.py  test_process_markers.py  test_quaternion.py  test_sequence_ik.py  test_skel_state.py  test_skeleton.py  test_solver.py
pymomentum/test/resources/: animation_test.fbx
(+1071 files in other folders)
