[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pymomentum"
version = "0.1.0"
description = "A library providing foundational algorithms for human kinematic motion and numerical optimization solvers to apply human motion in various applications"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Meta Reality Labs Research", email = "jeongseok@meta.com" },
]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = []

[project.urls]
Homepage = "https://github.com/facebookincubator/momentum"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.args = [
    "-DBUILD_SHARED_LIBS=OFF",
    "-DMOMENTUM_BUILD_PYMOMENTUM=ON",
    "-DMOMENTUM_BUILD_EXAMPLES=OFF",
    "-DMOMENTUM_BUILD_TESTING=ON",
    "-DUSE_SYSTEM_NVTX=ON",
]
minimum-version = "0.10"
sdist.exclude = [
    "cmake/",
    "test/",
    "*.h",
    "*.cpp",
    "*.cmake",
    ".clang-format",
    "CMakeLists.txt",
]
wheel.exclude = ["geometry_test_helper.*"]

[[tool.scikit-build.overrides]]
if.platform-system = "^win32"
cmake.args = [
    "-DBUILD_SHARED_LIBS=OFF",
    "-G Visual Studio 17 2022",
    "-DMOMENTUM_BUILD_PYMOMENTUM=ON",
    "-DMOMENTUM_BUILD_EXAMPLES=OFF",
    "-DMOMENTUM_BUILD_TESTING=ON",
    "-DUSE_SYSTEM_NVTX=ON",
]
